--- a/index.html
+++ b/index.html
@@ -71,6 +71,15 @@
       font-family: 'Courier New', monospace;
     }
   </style>
+  
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-EG07018VHK"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+    gtag('config', 'G-EG07018VHK');
+  </script>
 </head>
 
 <body>
@@ -300,5 +309,6 @@
     });
   </script>
 </body>
+
 
 </html>
